--- a/EverythingUI.WPF/Themes/Generic.xaml
+++ b/EverythingUI.WPF/Themes/Generic.xaml
@@ -1,13 +1,15 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Converters/Converters.xaml"/>
+        <!-- 基础资源：颜色、字体 -->
         <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Styles/Colors.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Styles/Fonts.xaml"/>
+        <!-- 基础样式（控件主题可能依赖这些） -->
         <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Styles/ButtonStyles.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Styles/TextBoxStyles.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Styles/CardStyles.xaml"/>
+        <!-- 控件主题 -->
         <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Themes/EverythingButton.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Themes/EverythingCard.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Themes/EverythingTextBox.xaml"/>
@@ -17,5 +19,5 @@
         <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Themes/EverythingComboBox.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Themes/EverythingSlider.xaml"/>
     </ResourceDictionary.MergedDictionaries>
-    
+
 </ResourceDictionary>
